correct print statements and some comments

--- a/blp_settings.ini
+++ b/blp_settings.ini
@@ -1,9 +1,8 @@
 [sciezki]
 path_source = C:\Users\aszadkowska\Downloads\
-# path_destination = C:\Users\aszadkowska\Downloads\blpscreenshots\
 path_destination =\\plrudfps01\data\Rudniki\archiwizacja_faktur\BLP_REPORTS\screenshots\
 path_excel = \\plrudfps01\data\Rudniki\archiwizacja_faktur\BLP_REPORTS\EXCEL_Reports\
-path_chrome_driver = C:\Users\aszadkowska\Documents\dodatki\chromedriver_win32_2020_12
+path_chrome_driver = C:\Users\aszadkowska\Documents\dodatki\chromedriver_win32_2020_12\
 
 # W przypadku pojawienie sią poniższego błedu, trzeba pobrać z netu nową wersję ChromeDriver
 # selenium.common.exceptions.SessionNotCreatedException:
